WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250448
[@property] CSS custom properties containing var() are not updated when the referenced property is animated
https://bugs.webkit.org/show_bug.cgi?id=250448
Summary
[@property] CSS custom properties containing var() are not updated when the r...
Antti Koivisto
Reported
2023-01-11 03:36:14 PST
This works for normal properties using var()
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-01-11 03:36:26 PST
rdar://104080598
Antti Koivisto
Comment 2
2023-01-11 03:39:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8518
Antti Koivisto
Comment 3
2023-01-11 05:11:36 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/37875
EWS
Comment 4
2023-01-11 07:38:06 PST
Committed
258786@main
(fee955ee6904): <
https://commits.webkit.org/258786@main
> Reviewed commits have been landed. Closing PR #8518 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug