[@property] CSS custom properties containing var() are not updated when the referenced property is animated https://bugs.webkit.org/show_bug.cgi?id=250448 rdar://104080598

Reviewed by Antoine Quint.

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/at-property-animation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/at-property-animation.html:
* Source/WebCore/style/PropertyCascade.cpp:
(WebCore::Style::PropertyCascade::shouldApplyAfterAnimation):

Also check for custom properties containing var() when figuring out the post-animation cascade.

Canonical link: https://commits.webkit.org/258786@main